Fixed bugs on mobile and made it more responsive

--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@ a {
     /* padding: 20px; */
     background-color: #1f2937;
     padding-bottom: 80px;
+    flex-wrap: wrap;
 }
 
 .section-1 h1 {
@@ -106,7 +107,7 @@ a {
 /* Start-Section-2 Styling */
 
 .section-2 {
-    height: 450px;
+    min-height: 450px;
     padding: 20px;
 }
 
@@ -123,6 +124,7 @@ a {
     gap: 200px;
     text-align: center;
     margin: 50px;
+    flex-wrap: wrap;
 }
 
 .section-2 .text {
@@ -144,10 +146,11 @@ a {
 /* Start-Section-3 Styling */
 
 .quote-content {
-    height: 400px;
-    /* padding: 0px 60px; */
+    min-height: 400px;
+    padding: 0px 60px;
     background-color: #E5E7EB;
     color: #2a3441bb;
+    white-space: pre-wrap;
 }
 
 .quote-main {
@@ -156,6 +159,7 @@ a {
     font-style: italic;
     padding-left: 30px;
     padding-right: 30px;
+    /* padding: 30px; */
 }
 
 .quote-sub {
